--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ PORT=8080
 # DBConnection =mongodb://localhost:27017/Ecommerece
 DBConnection = mongodb+srv://sakshicoder800:sakshicoder800@ecommerece.jt2hi.mongodb.net/
 MONGO_URI=mongodb://localhost:27017/mydatabase
+JWT_SECRET=SDGDSFGS5XX56DFG8HHUYN7J
